p2/confs/app2.yml
---

apiVersion: v1
kind: Service
metadata:
  name: app-2
  labels:
    app: app-2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: app-2

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
  labels:
    app: app-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
      - name: app-2
        image: paulbouwer/hello-kubernetes:1.10
        imagePullPolicy: IfNotPresent
---
