p2/confs/app3.yml
---

apiVersion: v1
kind: Service
metadata:
  name: app-3
  labels:
    app: app-3
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: app-3

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-3
  labels:
    app: app-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-3
  template:
    metadata:
      labels:
        app: app-3
    spec:
      containers:
      - name: app-3
        image: paulbouwer/hello-kubernetes:1.10
        imagePullPolicy: IfNotPresent
---
